[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/art/Actors/Burger Boss/1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/BurgerBoss.gd" type="Script" id=2]
[ext_resource path="res://assets/art/Actors/Burger Boss/2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Actors/Burger Boss/3.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Actors/Burger Boss/0.png" type="Texture" id=5]
[ext_resource path="res://assets/art/Actors/burger-die5.png" type="Texture" id=6]
[ext_resource path="res://assets/art/Actors/burger-die6.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Actors/burger-die1.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Actors/burger-die4.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Actors/hp.png" type="Texture" id=10]
[ext_resource path="res://assets/art/Actors/burger-die2.png" type="Texture" id=11]
[ext_resource path="res://assets/art/Actors/burger-die8.png" type="Texture" id=12]
[ext_resource path="res://assets/art/Actors/burger-die7.png" type="Texture" id=13]
[ext_resource path="res://assets/art/Actors/burger-die3.png" type="Texture" id=14]
[ext_resource path="res://assets/art/Blocks/Blank.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "deadforever",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 249.002

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -6.92291, -253.205, 48.8573, -248.956, 101.982, -231.454, 146.606, -206.988, 188.042, -170.332, 203.979, -152.801, 220.979, -120.927, 239.573, -81.6149, 250.729, -44.428, 253.916, 6.57103, 243.822, 76.1635, 225.229, 117.069, 214.142, 142.411, 176.755, 186.028, 111.783, 201.577, 110.649, 210.651, 109.798, 253.755, 23.0227, 253.471, 24.4406, 226.532, 52.7985, 227.099, 53.6492, 204.412, -28.0214, 205.547, -29.1557, 252.054, -103.453, 253.755, -103.453, 226.532, -79.3491, 224.546, -80.767, 206.965, -185.124, 186.831, -230.496, 110.548, -245.526, 78.7871, -254.034, 31.9966, -253.75, -42.301, -242.794, -92.7709, -215.7, -141.114, -155.139, -205.394, -73.3279, -243.643, -46.7659, -250.549 )

[node name="BurgerBoss" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["enemy"]]
position = Vector2( -1, -1 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
speed_scale = 0.5
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -352, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.618, -0.567226 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 26, 0 )
enabled = true
cast_to = Vector2( 0, 256 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 3 )
light_mask = 2

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -80.0
margin_top = -300.0
margin_right = -40.0
margin_bottom = -297.0
rect_scale = Vector2( 4, 4 )
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHealth" type="Sprite" parent="HealthBar"]
position = Vector2( 20, 2 )
texture = ExtResource( 10 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
